--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -60,9 +60,9 @@
             <script>
                 BotChat.App({
                     directLine: {
-                        secret: 'RHbDb2qcax0.cwA.JNw.vM8QYMWi__1NO2hpLV5s4yNbZqCMH0S_kq6CSErijjc'
+                        secret: 'FhoZRDuRE_8.cwA.VUA.XDqPTho3xJJJTwF14KTPZeyo0QZ5plfns2nMUS0h99I'
                         //,domain: 'https://northamerica.directline.botframework.com/v3/directline'
-                    },    //TimeSolution 
+                    },    //TimeSolution
                     user: { id: 'userid' },
                     bot: { id: 'botid' },
                     resize: 'detect'
