--- a/webapps/ROOT/index.html
+++ b/webapps/ROOT/index.html
@@ -39,8 +39,9 @@
     </script>-->
 </head>
 <body>
+    <input type="hidden" id="conversationId">
     <div class="mainBG">
-        <!--<img src="assets/image/chatbotStyle/psa_background.png" />--> 
+        <!--<img src="assets/image/chatbotStyle/psa_background.png" />-->
         <div id="wrapper">
             <div id="navi-header-wrap">
                 <div class="banner" id="botChatBtn">
